--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body>
     <header style="margin-top: 2.87rem;">
-        <div class="container">
+        <div class="container header_wrapper">
             <!-- <nav> -->
                 <div class="logo">
                     <div class="part1"></div>
@@ -88,7 +88,13 @@
                     </ul>
                 </div>
             <!-- </nav> -->
+        </div>
 
+        <div class="container_mb">
+            <div class="nav_item_mb"><a href="#">Услуги</a></div>
+            <div class="nav_item_mb"><a href="#">Виджеты</a></div>
+            <div class="nav_item_mb"><a href="#">Интеграции</a></div>
+            <div class="nav_item_mb"><a href="#">Кейсы</a></div>
         </div>
     </header>
     <main>
@@ -125,33 +131,62 @@
                         <div class="item_text item_3_text">использования CRM</div>
                     </div>
                 </div>
+                <div class="features_mb">
+                    <div class="features_item_mb">
+                        <div class="line"></div>
+                        <p>Skype аудит</p>
+                    </div>
+                    <div class="features_item_mb">
+                        <div class="line"></div>
+                        <p>30 виджетов</p>
+                    </div>
+                    <div class="features_item_mb">
+                        <div class="line"></div>
+                        <p>Dashboard</p>
+                    </div>
+                    <div class="features_item_mb">
+                        <div class="line"></div>
+                        <p>Месяц аmoCRM</p>
+                    </div>
+                </div>
                 <a href="#" class="right_btn">Получить консультацию</a>
             </div>
         </div>
     </main>
     <footer>
-        <div class="container footer_wrapper">
+        <div class="container footer_wrapper footer_mb">
                 <ul class="footer_col">
                     <li class="footer_col_title">О компании</li>
-                    <li class="col_item"><a href="#">Партнёрская программа</a></li>
+                    <li class="col_item" ><a href="#" style="width:fit-content">Партнёрская программа</a></li>
                     <li class="col_item"><a href="#">Вакансии</a></li>
                 </ul>
-                <ul class="footer_col">
-                    <li class="footer_col_title">Меню</li>
-                    <li class="col_item"><a href="#">Расчёт стоимости</a></li>
-                    <li class="col_item"><a href="#">Услуги</a></li>
-                    <li class="col_item"><a href="#">Виджеты</a></li>
-                    <li class="col_item"><a href="#">Интеграции</a></li>
-                    <li class="col_item"><a href="#">Наши клиенты</a></li>
-                </ul>
-                <ul class="footer_col">
-                    <li class="footer_col_title"><br></li>
-                    <li class="col_item"><a href="#">Кейсы</a></li>
-                    <li class="col_item"><a href="#">Благодарственные письма</a></li>
-                    <li class="col_item"><a href="#">Сертификаты</a></li>
-                    <li class="col_item"><a href="#">Блог на Youtube</a></li>
-                    <li class="col_item"><a href="#">Вопрос / Ответ</a></li>
-                </ul>
+                <div class="col_wrapper">
+                    <ul class="footer_col col1">
+                        <li class="footer_col_title">Меню</li>
+                        <li class="col_item fix_width"><a href="#">Расчёт стоимости</a></li>
+                        <li class="col_item"><a href="#">Услуги</a></li>
+                        <li class="col_item"><a href="#">Виджеты</a></li>
+                        <li class="col_item"><a href="#">Интеграции</a></li>
+                        <li class="col_item"><a href="#">Наши клиенты</a></li>
+                    </ul>
+                    <ul class="footer_col second_col">
+                        <li class="footer_col_title "><br></li>
+                        <li class="col_item "><a href="#">Кейсы</a></li>
+                        <li class="col_item "><a href="#">Благодарственные письма</a></li>
+                        <li class="col_item"><a href="#">Сертификаты</a></li>
+                        <li class="col_item"><a href="#">Блог на Youtube</a></li>
+                        <li class="col_item"><a href="#">Вопрос / Ответ</a></li>
+                    </ul>
+                    <ul class="footer_col second_col_mb">
+                        <li class="footer_col_title "><br></li>
+                        <li class="col_item fix_width"><a href="#">Благодарственные письма</a></li>
+                        <li class="col_item"><a href="#">Кейсы</a></li>
+                        <li class="col_item"><a href="#">Сертификаты</a></li>
+                        <li class="col_item"><a href="#">Блог на Youtube</a></li>
+                        <li class="col_item"><a href="#">Вопрос / Ответ</a></li>
+                    </ul>
+                </div>
+                
                 <ul class="footer_col last_col">
                     <li class="footer_col_title">Контакты</li>
                     <li class="col_item"><a href="#">+7 555 555-55-55</a></li>
@@ -186,11 +221,11 @@
                 </ul>
         </div>
     </footer> 
-    <div class="redball"></div>
+    <!-- <div class="redball"></div>
     <div class="redball sm"></div>
-    <div class="purpleball"></div>
-    <div class="purpleblur"></div>
-    <div class="redblur"></div>
+    <div class="purpleball"></div> -->
+    <!-- <div class="purpleblur"></div>
+    <div class="redblur"></div> -->
 </body>
 
 </html>
